# text_utils

./: .gitignore  pyproject.toml
scripts/: run_cli.py
src/text_utils/: __init__.py  charset.py  cleaner.py  cli.py  extractor.py  formatter.py  language.py  line_ops.py  regex_tool.py
src/text_utils.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_charset.py  test_cleaner.py  test_extractor.py  test_formatter.py  test_language.py  test_line_ops.py  test_regex_tool.py
